kustomize/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shanari-shanari-deployment
spec:
  template:
    metadata:
      annotations:
        gke-gcsfuse/volumes: "true"
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
      containers:
        - name: shanari-shanari-fe
          image: asia-northeast1-docker.pkg.dev/shanari-shanari/shanari-shanari/shanari-shanari-fe:e03f6e5775e70abb8fd28e05b5320d67b88bb7c2
          volumeMounts:
            - name: gcs-fuse-csi-static
              mountPath: /app/public/contents/blog/
              readOnly: false
      serviceAccountName: shanari-ksa
      volumes:
        - name: gcs-fuse-csi-static
          persistentVolumeClaim:
            claimName: gcs-fuse-csi-static-pvc
            readOnly: false
      securityContext:
        fsGroup: 1001
