kustomize/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shanari-shanari-service
  labels:
    app: shanari
spec:
  selector:
    app: shanari-shanari-deployment
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
